# em4m

./: CMakeLists.txt  README.md  package.xml
config/: pr2_right_arm.yaml  problem.yaml  pushplan.rviz  ros.console  sim.yaml  smpl.console
config/env/: tabletop.env
config/urdf/pr2_description/: pr2.urdf
dat/: MAMO.csv  PUSH_DEBUG_DATA.csv
dat/clutter_scenes/0/: plan_000000_SCENE.txt  plan_000001_SCENE.txt  plan_000002_SCENE.txt  plan_000003_SCENE.txt  plan_000004_SCENE.txt  plan_000005_SCENE.txt  plan_000006_SCENE.txt  plan_000007_SCENE.txt  plan_000008_SCENE.txt  plan_000009_SCENE.txt  plan_000010_SCENE.txt  plan_000011_SCENE.txt  plan_000012_SCENE.txt  plan_000013_SCENE.txt  plan_000014_SCENE.txt  plan_000015_SCENE.txt  plan_000016_SCENE.txt  plan_000017_SCENE.txt  plan_000018_SCENE.txt  plan_000019_SCENE.txt  plan_000020_SCENE.txt  plan_000021_SCENE.txt  plan_000022_SCENE.txt  plan_000023_SCENE.txt  plan_000024_SCENE.txt  plan_000025_SCENE.txt  plan_000026_SCENE.txt  plan_000027_SCENE.txt  plan_000028_SCENE.txt  plan_000029_SCENE.txt  plan_000030_SCENE.txt  plan_000031_SCENE.txt  plan_000032_SCENE.txt  plan_000033_SCENE.txt  plan_000034_SCENE.txt  plan_000035_SCENE.txt  plan_000036_SCENE.txt  plan_000037_SCENE.txt  plan_000038_SCENE.txt  plan_000039_SCENE.txt  (+158 more)
dat/clutter_scenes/10/: plan_200000_SCENE.txt  plan_200001_SCENE.txt  plan_200002_SCENE.txt  plan_200003_SCENE.txt  plan_200004_SCENE.txt  plan_200005_SCENE.txt  plan_200006_SCENE.txt  plan_200007_SCENE.txt  plan_200008_SCENE.txt  plan_200009_SCENE.txt  plan_200010_SCENE.txt  plan_200011_SCENE.txt  plan_200012_SCENE.txt  plan_200013_SCENE.txt  plan_200014_SCENE.txt  plan_200015_SCENE.txt  plan_200016_SCENE.txt  plan_200017_SCENE.txt  plan_200018_SCENE.txt  plan_200019_SCENE.txt  plan_200020_SCENE.txt  plan_200021_SCENE.txt  plan_200022_SCENE.txt  plan_200023_SCENE.txt  plan_200024_SCENE.txt  plan_200025_SCENE.txt  plan_200026_SCENE.txt  plan_200027_SCENE.txt  plan_200028_SCENE.txt  plan_200029_SCENE.txt  plan_200030_SCENE.txt  plan_200031_SCENE.txt  plan_200032_SCENE.txt  plan_200033_SCENE.txt  plan_200034_SCENE.txt  plan_200035_SCENE.txt  plan_200036_SCENE.txt  plan_200037_SCENE.txt  plan_200038_SCENE.txt  plan_200039_SCENE.txt  (+138 more)
dat/clutter_scenes/15/: plan_300000_SCENE.txt  plan_300001_SCENE.txt  plan_300002_SCENE.txt  plan_300003_SCENE.txt  plan_300004_SCENE.txt  plan_300005_SCENE.txt  plan_300006_SCENE.txt  plan_300007_SCENE.txt  plan_300008_SCENE.txt  plan_300009_SCENE.txt  plan_300010_SCENE.txt  plan_300011_SCENE.txt  plan_300012_SCENE.txt  plan_300013_SCENE.txt  plan_300014_SCENE.txt  plan_300015_SCENE.txt  plan_300016_SCENE.txt  plan_300017_SCENE.txt  plan_300018_SCENE.txt  plan_300019_SCENE.txt  plan_300020_SCENE.txt  plan_300021_SCENE.txt  plan_300022_SCENE.txt  plan_300023_SCENE.txt  plan_300024_SCENE.txt  plan_300025_SCENE.txt  plan_300026_SCENE.txt  plan_300027_SCENE.txt  (+173 more)
launch/: pr2.launch  sim.launch
scripts/: draw_scene.py  nb_files.py  screen_pushplan  screenrc.common  sim.py  study.py  utils.py  ycb_download.py
src/agents/: agent.cpp  agent_lattice.cpp  object.cpp  robot.cpp
src/sampling/: node.cpp  ompl.cpp  rrt.cpp  rrtstar.cpp  sampling_planner.cpp  tcrrt.cpp
src/search/: cbs.cpp  cbs_nodes.cpp  cbswp.cpp  conflicts.cpp  focal.cpp  mamo_node.cpp  mamo_search.cpp  pbs.cpp  planner.cpp  wastar.cpp
src/utils/: bullet_sim.cpp  collision_checker.cpp  constants.cpp  data_gen.cpp  discretisation.cpp  geometry.cpp  hash_manager.cpp  types.cpp
test/: coop_plan.cpp  gen_data.cpp  run_ompl.cpp  sampling.cpp  study.cpp
(+208 files in other folders)
